...
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/Football.Toolbar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <ImageButton
                    android:id="@+id/imgSearch"
                    android:contentDescription="@string/image"
                    android:layout_marginEnd="10dp"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="end"
                    android:background="@drawable/ic_search"/>
...
