...
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detailleague.DetailLeagueFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayoutDetailLeagues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:fitsSystemWindows="true"
            android:background="@color/colorPrimary"
            android:visibility="@{showData ? View.VISIBLE : View.GONE}"
...
